# fleet-gateway

./: .gitignore  README.md  pyproject.toml
.guardkit/: graphiti.yaml
.guardkit/features/: FEAT-FG-001.yaml
common/: __init__.py  envelope.py  graphiti_client.py  jarvis_client.py  subject.py  tutor_client.py
docs/: FEAT-FG-001-build-plan.md  FEAT-FG-001-e2e-test-strategy.md  FEAT-FG-001-scope.md  architecture.md  fleet-gateway-slack-jarvis-door-conversation-starter.md
docs/handoffs/: study-tutor-student-model-read-endpoint.md
docs/history/: autobuild-FEAT-FG-001-fail-run-1.md  autobuild-FEAT-FG-001-resume-run-2.md  autobuild-FEAT-FG-001-review.md  autobuild-FEAT-FG-001-success-history.md  command_history.md
docs/runbooks/: RUNBOOK-fleet-gateway-bridge-e2e.md  RUNBOOK-fleet-gateway-openwebui-e2e.md  RUNBOOK-fleet-gateway-scholar-e2e.md  RUNBOOK-voice-004-reachy-local-voice-pickup.md
features/: conftest.py
features/fleet-gateway-common-and-interfaces/: fleet-gateway-common-and-interfaces.feature  fleet-gateway-common-and-interfaces_assumptions.yaml  fleet-gateway-common-and-interfaces_summary.md  (+5 more)
openwebui/: README.md  build_pipe.py  nats_fleet_pipe.deploy.py  nats_fleet_pipe.py
reachy/: .env.example  README.md  RUNBOOK-deploy-scholar-reachy-mini.md  SDK_SETUP.md
scripts/: bridge-probe.py  scholar-probe.py
tests/: __init__.py  conftest.py  test_agent_status.py  test_ask_tutor.py  test_celebrate_achievement.py  test_envelope.py  test_graphiti_client.py  test_jarvis_client.py  test_openwebui_pipe.py  test_query_student_model.py  test_subject.py  test_tutor_client.py
(+40 files in other folders)
