[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fleet-gateway"
version = "0.1.0"
description = "Shared gateway client library for Jarvis-routed fleet adapters (OpenWebUI, Reachy)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Appmilla Fleet" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "nats-py>=2.9.0",
    "pydantic>=2.0",
    "graphiti-core",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-bdd>=8.0",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["common"]

[tool.hatch.build.targets.sdist]
include = [
    "common",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["common", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring external services",
    "seam: marks seam/boundary tests",
    "integration_contract: marks contract tests",
]
